@@ -1,3 +1,14 @@
+2010-06-13  Tony Chang  <tony@chromium.org>
+
+        Build fix, not reviewed.
+
+        fix chromium compile after r61094 (id attribute refactor)
+        https://bugs.webkit.org/show_bug.cgi?id=40553
+
+        * src/ChromeClientImpl.cpp:
+        * src/WebFormControlElement.cpp:
+        (WebKit::WebFormControlElement::nameForAutofill):
+
 2010-06-13  Andras Becsi  <abecsi@inf.u-szeged.hu>
 
         Reviewed by Darin Adler.
