@@ -1,3 +1,13 @@
+2010-06-13  Tony Chang  <tony@chromium.org>
+
+        Build fix, not reviewed.
+
+        fix chromium compile after r61094 (id attribute refactor)
+        https://bugs.webkit.org/show_bug.cgi?id=40553
+
+        * bindings/v8/custom/V8NamedNodesCollection.cpp:
+        (WebCore::V8NamedNodesCollection::itemWithName):
+
 2010-06-13  Darin Adler  <darin@apple.com>
 
         Reviewed by Alexey Proskuryakov.
